--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "mybotapp",
   "version": "1.0.0",
+  "description": "My Telegram Bot",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2",
-    "telegraf": "^4.16.3"
+    "dotenv": "^8.2.0",
+    "telegraf": "^4.0.0",
+    "node-fetch": "^2.6.1"
   }
 }
