--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "telegraf": "^4.0.0",
-    "node-fetch": "^2.6.1"
+    "fs": "^0.0.1-security",
+    "node-fetch": "^2.6.1",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
+    "telegraf": "^4.0.0"
   }
 }
